--- a/logischelaag.html
+++ b/logischelaag.html
@@ -35,24 +35,22 @@
 <br>
 <br>
 <br>
-Uitleg over de logischelaag
-<br>
-<br>
-1. Wat is de logischelaag ? 
-<br>
-<br>
+<head> Uitleg over de logischelaag</head>
+<body>
+<p>1.Wat is de logischelaag? :</p>
+<p> De logische laag is een onderdeel van het 3-lagen model in ICT-systemen. Dit model verdeelt een systeem in drie lagen: de toepassingenlaag, de logische laag, en de fysieke laag1.
 
-De logische laag is een onderdeel van het 3-lagen model in ICT-systemen. Dit model verdeelt een systeem in drie lagen: de toepassingenlaag, de logische laag, en de fysieke laag.
-De logische laag (ook wel systeemsoftware genoemd) omvat de software die de werking van de hardware ondersteunt. Voorbeelden van elementen in de logische laag zijn:
-<br>
-<br>
-1. Besturingssystemen (zoals Andriod of iOS)
-2. Bestandssystemen en beveiliging
-3.Netwerksoftware (zoals lokaal netwerk en internet)
-Deze laag zorgt ervoor dat de hardware effectief kan worden gebruikt door de toepassingen die erop draaien.
-<br>
-<br>
-Mijn logischelaag (IOS)
+    De logische laag (ook wel systeemsoftware genoemd) omvat de software die de werking van de hardware ondersteunt. Voorbeelden van elementen in de logische laag zijn:
+    
+   1. Besturingssystemen (zoals Andriod of iOS)
+   2.Bestandssystemen en beveiliging
+   3. Netwerksoftware (zoals lokaal netwerk en internet)
+   <br>
+   <br>
+    Deze laag zorgt ervoor dat de hardware effectief kan worden gebruikt door de toepassingen die erop draaien.
+
+
+
 
 </body>
 </html>
