--- a/logischelaag.html
+++ b/logischelaag.html
@@ -37,7 +37,7 @@
 <br>
 <head> Uitleg over de logischelaag</head>
 <body>
-<p>1.Wat is de logischelaag? :</p>
+<p>1.Wat is de logischelaag? </p>
 <p> De logische laag is een onderdeel van het 3-lagen model in ICT-systemen. Dit model verdeelt een systeem in drie lagen: de toepassingenlaag, de logische laag, en de fysieke laag1.
 
     De logische laag (ook wel systeemsoftware genoemd) omvat de software die de werking van de hardware ondersteunt. Voorbeelden van elementen in de logische laag zijn:
@@ -54,6 +54,7 @@
    <br>
     Deze laag zorgt ervoor dat de hardware effectief kan worden gebruikt door de toepassingen die erop draaien.
 
+    <p>2. Mijn logischelaag (IOS) :</p>
 
 
 
