--- a/logischelaag.html
+++ b/logischelaag.html
@@ -57,7 +57,9 @@
     <p>2. Mijn logischelaag (IOS) :</p>
     iOS is het mobiele besturingssysteem ontwikkeld door Apple voor hun iPhone, iPad en iPod Touch apparaten. Het zorgt ervoor dat je deze apparaten kunt gebruiken door de hardware en software te beheren. Eerst werd het uitgebracht in 2007 als Iphone OS samen met de eerste Iphone. In 2010 werd de naam veranderd naar iOS om aan te geven dat het besturingssysteem niet alleen voor de iPhone bedoeld was. IOS is nu niet alleen voor iphone, maar ook voor de Ipad en AppleTV. 
 
+    <p>Lees meer over IOS op deze <a href="https://nl.wikipedia.org/wiki/IOS_(Apple)" target="_blank">pagina</a>.</p>
 
+    <iframe width="560" height="315" src="https://youtu.be/NoPromVa7eA?si=579x_xUvXur8GIHn" frameborder="0" allowfullscreen></iframe>
 
 </body>
 </html>
