--- a/logischelaag.html
+++ b/logischelaag.html
@@ -59,7 +59,7 @@
 
     <p>Lees meer over IOS op deze <a href="https://nl.wikipedia.org/wiki/IOS_(Apple)" target="_blank">pagina</a>.</p>
 
-    <iframe width="560" height="315" src="https://youtu.be/NoPromVa7eA?si=579x_xUvXur8GIHn" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/=g5AmKLIIAJbAna1c" frameborder="0" allowfullscreen></iframe>
 
 </body>
 </html>
