--- a/logischelaag.html
+++ b/logischelaag.html
@@ -59,7 +59,8 @@
 
     <p>Lees meer over IOS op deze <a href="https://nl.wikipedia.org/wiki/IOS_(Apple)" target="_blank">pagina</a>.</p>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/dIfW10lxWRgUxxEp" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/75KGNq_Jy9g?si=lQVgP64a0m7eQg4M" frameborder="0" allowfullscreen></iframe>
+
 
 </body>
 </html>
