--- a/toepassingenlaag.html
+++ b/toepassingenlaag.html
@@ -32,12 +32,24 @@
 
     <br>
     <br>
-    <br>
-    <br>
-    <br>
     Uitleg over de toepassingenlaag
     <br>
     <br>
-    1. Wat is de toepassingenlaag ? 
+    1. Wat is de toepassingenlaag
+    De toepassingslaag, ook wel bekend als de applicatielaag, is de bovenste laag in het OSI-model en het TCP/IP-model. Deze laag is verantwoordelijk voor het bieden van netwerkdiensten direct aan de eindgebruikers of applicaties. Hier zijn enkele belangrijke punten over de toepassingslaag:
+    <br>
+    <br>
+    Functies van toepassingenlaag
+    <br>
+    <br>
+    Communicatie: Zorgt voor communicatie tussen applicaties op verschillende systemen. Dit omvat e-mail, bestandsoverdracht, en webdiensten.
+   <br>
+   <br>
+   Protocolen: Bevat verschillende protocollen zoals HTTP (voor webverkeer), FTP (voor bestandsoverdracht), SMTP (voor e-mail).
+   <br>
+   <br>
+   Interface: Biedt een interface voor gebruikers en applicaties om toegang te krijgen tot netwerkdiensten. 
+   
+   <p>Lees meer over IOS op deze <a href="https://nl.wikipedia.org/wiki/Toepassingslaag#:~:text=Een%20toepassingslaag%20of%20applicatielaag%20is,communiceren%20over%20telecommunicatienetwerken%20en%20computernetwerken." target="_blank">pagina</a>.</p>
 </body>
 </html>
