--- a/toepassingenlaag.html
+++ b/toepassingenlaag.html
@@ -32,6 +32,8 @@
 
     <br>
     <br>
+    <br>
+    <br>
     Uitleg over de toepassingenlaag
     <br>
     <br>
@@ -49,7 +51,26 @@
    <br>
    <br>
    Interface: Biedt een interface voor gebruikers en applicaties om toegang te krijgen tot netwerkdiensten. 
-   
+   <br>
+   <br>
+   2. Mijn  toepassingenlaag bij IOS
+   De toepassingslaag op een iPhone speelt een cruciale rol in het functioneren van verschillende apps en diensten. Hier zijn enkele belangrijke functies van de toepassingslaag op een iPhone:
+   <br>
+   <br>
+   Communicatie: De toepassingslaag zorgt ervoor dat apps zoals Mail, Safari, en Berichten kunnen communiceren met servers en andere apparaten via internet. Dit omvat het verzenden en ontvangen van e-mails, het laden van webpagina’s, en het versturen van berichten.
+   <br>
+   <br>
+   Protocolen: Deze laag maakt gebruik van verschillende netwerkprotocollen zoals HTTP/HTTPS voor webverkeer, SMTP/IMAP voor e-mail, en WebSocket voor real-time communicatie in apps zoals chat-apps en games.
+   <br>
+   <br>
+   Interface: Het biedt een interface voor gebruikers en apps om netwerkdiensten te gebruiken. Bijvoorbeeld, wanneer je een webpagina opent in Safari, maakt de toepassingslaag gebruik van het HTTP-protocol om de pagina op te halen van een webserver
+   <br>
+   <br>
+   Dataoverdracht: Apps zoals iCloud Drive en AirDrop gebruiken de toepassingslaag om bestanden en gegevens over te dragen tussen apparaten. Dit gebeurt via protocollen zoals FTP of SMB
+   <br>
+   <br>
    <p>Lees meer over IOS op deze <a href="https://nl.wikipedia.org/wiki/Toepassingslaag#:~:text=Een%20toepassingslaag%20of%20applicatielaag%20is,communiceren%20over%20telecommunicatienetwerken%20en%20computernetwerken." target="_blank">pagina</a>.</p>
+
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/rxdBKMDCdN0?si=6FLdaT61gANbRlzc" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
