--- a/logischelaag.html
+++ b/logischelaag.html
@@ -38,7 +38,7 @@
 <head> Uitleg over de logischelaag</head>
 <body>
 <p>1.Wat is de logischelaag? </p>
-<p> De logische laag is een onderdeel van het 3-lagen model in ICT-systemen. Dit model verdeelt een systeem in drie lagen: de toepassingenlaag, de logische laag, en de fysieke laag1.
+<p> De logische laag is een onderdeel van het 3-lagen model in ICT-systemen. Dit model verdeelt een systeem in drie lagen: de toepassingenlaag, de logische laag, en de fysieke laag.</p>
 
     De logische laag (ook wel systeemsoftware genoemd) omvat de software die de werking van de hardware ondersteunt. Voorbeelden van elementen in de logische laag zijn:
     <br>
@@ -55,7 +55,7 @@
     Deze laag zorgt ervoor dat de hardware effectief kan worden gebruikt door de toepassingen die erop draaien.
 
     <p>2. Mijn logischelaag (IOS) :</p>
-    iOS is het mobiele besturingssysteem ontwikkeld door Apple voor hun iPhone, iPad en iPod Touch apparaten. Het zorgt ervoor dat je deze apparaten kunt gebruiken door de hardware en software te beheren. Eerst werd het uitgebracht in 2007 als Iphone OS samen met de eerste Iphone. In 2010 werd de naam veranderd naar iOS om aan te geven dat het besturingssysteem niet alleen voor de iPhone bedoeld was. IOS is nu niet alleen voor iphone, maar ook voor de Ipad en AppleTV. 
+    <p> is het mobiele besturingssysteem ontwikkeld door Apple voor hun iPhone, iPad en iPod Touch apparaten. Het zorgt ervoor dat je deze apparaten kunt gebruiken door de hardware en software te beheren. Eerst werd het uitgebracht in 2007 als Iphone OS samen met de eerste Iphone. In 2010 werd de naam veranderd naar iOS om aan te geven dat het besturingssysteem niet alleen voor de iPhone bedoeld was. IOS is nu niet alleen voor iphone, maar ook voor de Ipad en AppleTV. </p>
 
     <p>Lees meer over IOS op deze <a href="https://nl.wikipedia.org/wiki/IOS_(Apple)" target="_blank">pagina</a>.</p>
 
