--- a/toepassingenlaag.html
+++ b/toepassingenlaag.html
@@ -76,5 +76,9 @@
    <p>Lees meer over de toepassingenlaag op deze <a href="https://nl.wikipedia.org/wiki/Toepassingslaag#:~:text=Een%20toepassingslaag%20of%20applicatielaag%20is,communiceren%20over%20telecommunicatienetwerken%20en%20computernetwerken." target="_blank">pagina</a>.</p>
 
    <iframe width="560" height="315" src="https://www.youtube.com/embed/rxdBKMDCdN0?si=6FLdaT61gANbRlzc" frameborder="0" allowfullscreen></iframe>
+
+   <img src="toepassinglaagafbeelding.gif" alt="toepassingenlaag.html"
+
+
 </body>
 </html>
