--- a/logischelaag.html
+++ b/logischelaag.html
@@ -62,5 +62,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/75KGNq_Jy9g?si=lQVgP64a0m7eQg4M" frameborder="0" allowfullscreen></iframe>
 
 
+    <img src="logischelaagafbeelding.png" alt="logischelaag.html"
+
 </body>
 </html>
