--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -38,6 +38,39 @@
     <br>
     <br>
     1. Wat is de fysiekelaag ? 
+    <br>
+    <br>
+    De fysieke laag is de eerste en onderste laag van het OSI-model (Open Systems Interconnection). Deze laag is verantwoordelijk voor de elektrische en mechanische aspecten van het transportmedium en het signaal. Hier zijn de belangrijkste functies van de fysieke laag:
+    <br>
+    <br>
+    Vertaling van binaire informatie: Het omzetten van binaire gegevens in een signaal en omgekeerd.
+    <br>
+    <br>
+    Mechanische karakteristieken: Definiëren van kabels, connectoren en maximale lengtes.
+    <br>
+    <br>
+    Signaalkarakteristieken: Specificeren van het elektrische signaal voor koper, het optische signaal voor glasvezel, of het radiosignaal voor draadloze communicatie.
+    <br>
+    <br>
+    Voorbeelden van technologieën die op de fysieke laag opereren zijn Ethernet, Wi-Fi en Bluetooth
+    <br>
+    <br>
+    2. Mijn fysiekelaag 
+    <br>
+    <br>
+    Bij een iPhone verwijst de fysieke laag naar de hardwarecomponenten die verantwoordelijk zijn voor de communicatie. Dit omvat de elektrische signalen, connectoren, en de fysieke verbindingen die worden gebruikt om gegevens over te dragen. Hier zijn enkele specifieke voorbeelden:
+    <br>
+    <br>
+    Wi-Fi en Bluetooth: Deze technologieën maken gebruik van radiosignalen om draadloze communicatie mogelijk te maken.
+    <br>
+    <br>
+    Lightning-connector: Dit is de fysieke poort die wordt gebruikt voor het opladen en het overdragen van gegevens via een kabel.
+    <br>
+    <br>
+    Cellulaire antennes: Deze zorgen voor de verbinding met mobiele netwerken voor bellen, sms’en en mobiele data.
+<br>
+<br>
+<p>Lees meer over de fysiekelaag op deze <a href="https://nl.wikipedia.org/wiki/Fysieke_laag" target="_blank">pagina</a>.</p>
 </body>
 </body>
 </html>
