--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -74,6 +74,7 @@
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/YE0S91xc64I?si=rhhqHkK9wHx6werN" frameborder="0" allowfullscreen></iframe>
 
+<img src="fysiekelaagafbeelding.jpeg" alt="fysiekelaag.html"
 </body>
 </body>
 </html>
