--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -46,10 +46,7 @@
     Vertaling van binaire informatie: Het omzetten van binaire gegevens in een signaal en omgekeerd.
     <br>
     <br>
-    Mechanische karakteristieken: Definiëren van kabels, connectoren en maximale lengtes.
-    <br>
-    <br>
-    Signaalkarakteristieken: Specificeren van het elektrische signaal voor koper, het optische signaal voor glasvezel, of het radiosignaal voor draadloze communicatie.
+    Signaal herkennen: herkennen van het elektrische signaal voor koper, het signaal voor glasvezel, of het radiosignaal voor draadloze communicatie.
     <br>
     <br>
     Voorbeelden van technologieën die op de fysieke laag opereren zijn Ethernet, Wi-Fi en Bluetooth
@@ -58,16 +55,16 @@
     2. Mijn fysiekelaag 
     <br>
     <br>
-    Bij een iPhone verwijst de fysieke laag naar de hardwarecomponenten die verantwoordelijk zijn voor de communicatie. Dit omvat de elektrische signalen, connectoren, en de fysieke verbindingen die worden gebruikt om gegevens over te dragen. Hier zijn enkele specifieke voorbeelden:
+    Bij een iPhone verwijst de fysieke laag naar de hardware componenten die verantwoordelijk zijn voor de communicatie. Dit zijn de elektrische signalen, connectoren, en de fysieke verbindingen die worden gebruikt om gegevens over te dragen. Dit zijn enkele voorbeelden:
     <br>
     <br>
-    Wi-Fi en Bluetooth: Deze technologieën maken gebruik van radiosignalen om draadloze communicatie mogelijk te maken.
+    Wi-Fi en Bluetooth: Deze technieken maken gebruik van radiosignalen om draadloze communicatie mogelijk te maken.
     <br>
     <br>
-    Lightning-connector: Dit is de fysieke poort die wordt gebruikt voor het opladen en het overdragen van gegevens via een kabel.
+    Lightning-connector: Dit is de fysieke poort die wordt gebruikt voor het opladen en het overdragen van gegevens via een kabel. Bijvoorbeeld fotos overzetten van een telefoon naar een computer met een USB-kabel.
     <br>
     <br>
-    Cellulaire antennes: Deze zorgen voor de verbinding met mobiele netwerken voor bellen, sms’en en mobiele data.
+ Antennes: Deze zorgen voor de verbinding met mobiele netwerken voor bellen, sms’en en mobiele data (4G of 5G).
 <br>
 <br>
 <p>Lees meer over de fysiekelaag op deze <a href="https://nl.wikipedia.org/wiki/Fysieke_laag" target="_blank">pagina</a>.</p>
