--- a/toepassingenlaag.html
+++ b/toepassingenlaag.html
@@ -40,16 +40,16 @@
     1. Wat is de toepassingenlaag
     <br>
     <br>
-    De toepassingslaag, ook wel bekend als de applicatielaag, is de bovenste laag in het OSI-model en het TCP/IP-model. Deze laag is verantwoordelijk voor het bieden van netwerkdiensten direct aan de eindgebruikers of applicaties. Hier zijn enkele belangrijke punten over de toepassingslaag:
+    De toepassingslaag, is de bovenste laag in het 3-lagen model in ICT-systemen. Deze laag is verantwoordelijk voor het bieden van netwerkdiensten direct aan de eindgebruikers Hier zijn een paar punten over de toepassingslaag:
     <br>
     <br>
     Functies van toepassingenlaag
     <br>
     <br>
-    Communicatie: Zorgt voor communicatie tussen applicaties op verschillende systemen. Dit omvat e-mail, bestandsoverdracht, en webdiensten.
+    Communicatie: Zorgt voor communicatie tussen applicaties op verschillende systemen. Dit zijn Bijvoorbeeld: e-mails 
    <br>
    <br>
-   Protocolen: Bevat verschillende protocollen zoals HTTP (voor webverkeer), FTP (voor bestandsoverdracht), SMTP (voor e-mail).
+   Protocolen: Bevat verschillende protocollen zoals: FTP (voor bestandsoverdracht) of SMTP (voor e-mail).
    <br>
    <br>
    Interface: Biedt een interface voor gebruikers en applicaties om toegang te krijgen tot netwerkdiensten. 
@@ -58,19 +58,19 @@
    2. Mijn  toepassingenlaag bij IOS
    <br>
    <br>
-   De toepassingslaag op een iPhone speelt een cruciale rol in het functioneren van verschillende apps en diensten. Hier zijn enkele belangrijke functies van de toepassingslaag op een iPhone:
+   De toepassingslaag op een iPhone speelt een belangrijke  rol in het werken  van verschillende apps en diensten. Hier zijn enkele functies van de toepassingslaag op een iPhone:
    <br>
    <br>
-   Communicatie: De toepassingslaag zorgt ervoor dat apps zoals Mail, Safari, en Berichten kunnen communiceren met servers en andere apparaten via internet. Dit omvat het verzenden en ontvangen van e-mails, het laden van webpagina’s, en het versturen van berichten.
+   Communicatie: De toepassingslaag zorgt ervoor dat apps zoals Mail, Safari, en Berichten kunnen communiceren met servers en andere apparaten via internet. 
    <br>
    <br>
-   Protocolen: Deze laag maakt gebruik van verschillende netwerkprotocollen zoals HTTP/HTTPS voor webverkeer, SMTP/IMAP voor e-mail, en WebSocket voor real-time communicatie in apps zoals chat-apps en games.
+   Protocolen: Deze laag maakt gebruik van verschillende netwerkprotocollen zoals HTTP/HTTPS voor webverkeer, SMTP/IMAP voor e-mail.
    <br>
    <br>
    Interface: Het biedt een interface voor gebruikers en apps om netwerkdiensten te gebruiken. Bijvoorbeeld, wanneer je een webpagina opent in Safari, maakt de toepassingslaag gebruik van het HTTP-protocol om de pagina op te halen van een webserver
    <br>
    <br>
-   Dataoverdracht: Apps zoals iCloud Drive en AirDrop gebruiken de toepassingslaag om bestanden en gegevens over te dragen tussen apparaten. Dit gebeurt via protocollen zoals FTP of SMB
+   Dataoverdracht: Apps zoals iCloud Drive en AirDrop gebruiken de toepassingslaag om bestanden en gegevens over te dragen tussen apparaten. Dit gebeurt via protocollen.
    <br>
    <br>
    <p>Lees meer over de toepassingenlaag op deze <a href="https://nl.wikipedia.org/wiki/Toepassingslaag#:~:text=Een%20toepassingslaag%20of%20applicatielaag%20is,communiceren%20over%20telecommunicatienetwerken%20en%20computernetwerken." target="_blank">pagina</a>.</p>
