--- a/geheugen.html
+++ b/geheugen.html
@@ -39,6 +39,27 @@ Uitleg over het geheugen van een computer
 <br>
 <br>
 1. Wat is het geheugen van een computer ? 
+<br>
+<br>
+Er zijn 2 verschillende onderdelen bij het geheugen van een telefoon 
+<br>
+<br>
+1. RAM 
+<br>
+<br>
+RAM (Random Access Memory). Het word gebruikt om processen en apps te ondersteunen. Het RAM kan meerdere dingen te gelijk dus hoe maar RAM je hebt hoe maar dingen je telefoon tegelijkertijd kan doen zonder vast te lopen. De meeste telefoon hebben tussen de 4GB en 8GB RAM. 
+<br>
+<br>
+2. Opslag 
+<br>
+<br>
+De opslag is de plek waar al je fotos , video’s, apps en andere bestanden worden opgeslagen. De mate waarin het word gemeten is ook GB (Gigabite). Hoeveel GB je hebt verschilt per telefoon hele nieuwe of dure telefoon hebben vaak veel GB (128GB of 256GB), dus kan je veel fotos opslaan. Oudere en goedkopere telefoon hebben vaak niet veel GB (32 of 64 GB) en die kunnen dus niet veel fotos opslaan.
+
+<p>Lees meer over het geheugen op deze <a href="https://www.belsimpel.nl/info/dossiers/telefoongeheugen#:~:text=Het%20opslaggeheugen%20wordt%20ook%20wel,4%20GB%20tot%20128%20GB." target="_blank">pagina</a>.</p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0X4aRnrrUDY?si=qtcXQ3RCkCxoHx1g" frameborder="0" allowfullscreen></iframe>
 </body>
+
+
 </body>
 </html>
