--- a/geheugen.html
+++ b/geheugen.html
@@ -58,6 +58,9 @@ De opslag is de plek waar al je fotos , video’s, apps en andere bestanden word
 <p>Lees meer over het geheugen op deze <a href="https://www.belsimpel.nl/info/dossiers/telefoongeheugen#:~:text=Het%20opslaggeheugen%20wordt%20ook%20wel,4%20GB%20tot%20128%20GB." target="_blank">pagina</a>.</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/0X4aRnrrUDY?si=qtcXQ3RCkCxoHx1g" frameborder="0" allowfullscreen></iframe>
+
+<img src="geheugenafbeelding.avif" alt="geheugen.html"
+
 </body>
 
 
