--- a/toepassingenlaag.html
+++ b/toepassingenlaag.html
@@ -22,6 +22,7 @@
                     <ul class="third-level-menu">
                         <li><a href="CPU.html">CPU</a></li>
                         <li><a href="geheugen.html"> geheugen </a></li>
+                        <li><a href="sim.html"> Sim kaart </a></li>
             
                     </ul>
                 </li>
