--- a/CPU.html
+++ b/CPU.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="opmaak.css">
 </head>
 <body>
-    <ul class="top-level-menu">
+    <ul class="top-level-menu"></ul>
         <li><a href="index.html">homepage</a></li>
         <li>
             <a href="">3 lagen model</a>
@@ -18,6 +18,7 @@
                     <ul class="third-level-menu">
                         <li><a href="CPU.html">CPU</a></li>
                         <li><a href="geheugen.html"> geheugen </a></li>
+                        <li><a href="sim.html"> Sim kaart </a></li>
             
                     </ul>
                 </li>
