--- a/geheugen.html
+++ b/geheugen.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <ul class="top-level-menu">
+    <ul class="top-level-menu"></ul>
         <li><a href="index.html">homepage</a></li>
         <li>
             <a href="">3 lagen model</a>
@@ -21,6 +21,7 @@
                     <ul class="third-level-menu">
                         <li><a href="CPU.html">CPU</a></li>
                         <li><a href="geheugen.html"> geheugen </a></li>
+                        <li><a href="sim.html"> Sim kaart </a></li>
             
                     </ul>
                 </li>
