--- a/CPU.html
+++ b/CPU.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="opmaak.css">
 </head>
 <body>
-    <ul class="top-level-menu"></ul>
+    
+    <ul class="top-level-menu">
         <li><a href="index.html">homepage</a></li>
         <li>
             <a href="">3 lagen model</a>
@@ -26,7 +27,7 @@
         </li>
         
     </ul>
-</body>
+
 
 <br>
 <br>
@@ -55,7 +56,7 @@
 <img src="werking.jpg" width="300px" height="300px">
 </body>
 1.9
-
+</body>
 </html>
 
 
