--- a/logischelaag.html
+++ b/logischelaag.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <ul class="top-level-menu"></ul>
+    <ul class="top-level-menu">
         <li><a href="index.html">homepage</a></li>
         <li>
             <a href="">3 lagen model</a>
@@ -21,7 +21,6 @@
                     <ul class="third-level-menu">
                         <li><a href="CPU.html">CPU</a></li>
                         <li><a href="geheugen.html"> geheugen </a></li>
-                        
             
                     </ul>
                 </li>
