--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -38,21 +38,29 @@
     Uitleg over de fysiekelaag
     <br>
     <br>
-    1. Wat is de fysiekelaag ? 
+     Wat is de fysiekelaag ? 
     <br>
     <br>
-    De fysieke laag is de eerste en onderste laag van het OSI-model (Open Systems Interconnection). Deze laag is verantwoordelijk voor de elektrische en mechanische aspecten van het transportmedium en het signaal. Hier zijn de belangrijkste functies van de fysieke laag:
+    1. RAM 
     <br>
     <br>
-    Vertaling van binaire informatie: Het omzetten van binaire gegevens in een signaal en omgekeerd.
+    De volledige vorm van RAM is Random Access Memory. De informatie die in dit type geheugen is opgeslagen, gaat verloren wanneer de stroomtoevoer naar de pc of laptop wordt uitgeschakeld. De informatie die in het RAM is opgeslagen, kan worden gecontroleerd met behulp van BIOS. Het is algemeen bekend als het hoofdgeheugen of het tijdelijke geheugen, het cachegeheugen of het vluchtige geheugen van het computersysteem
     <br>
     <br>
-    Signaal herkennen: herkennen van het elektrische signaal voor koper, het signaal voor glasvezel, of het radiosignaal voor draadloze communicatie.
+    Statisch RAM-geheugen
     <br>
     <br>
-    Voorbeelden van technologieën die op de fysieke laag opereren zijn Ethernet, Wi-Fi en Bluetooth
+    Statisch RAM is de volledige vorm van SRAM. In dit type RAM worden gegevens opgeslagen met behulp van de toestand van een geheugencel met zes transistoren. Statisch RAM wordt meestal gebruikt als cachegeheugen voor de processor (CPU).
     <br>
     <br>
+    Dynamisch RAM
+    <br>
+    <br>
+    DRAM staat voor Dynamic Random Access Memory. Het is een type RAM waarmee u elk bit aan gegevens in een afzonderlijke condensator binnen een specifiek geïntegreerd circuit kunt opslaan. Dynamisch RAM is een standaard computergeheugen van de vele moderne desktopcomputers.
+<br>
+<br>
+Dit type RAM is een vluchtig geheugen dat regelmatig van spanning moet worden voorzien. Anders verliest het de informatie die erop is opgeslagen
+    
     2. Mijn fysiekelaag 
     <br>
     <br>
@@ -70,7 +78,7 @@
 <br>
 <p>Lees meer over de fysiekelaag op deze <a href="https://nl.wikipedia.org/wiki/Fysieke_laag" target="_blank">pagina</a>.</p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/YE0S91xc64I?si=rhhqHkK9wHx6werN" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/-aQOv3T7P8E?si=lGqOfZrpcdlQzUOr" frameborder="0" allowfullscreen></iframe>
 
 <img src="fysiekelaagafbeelding.jpeg" alt="fysiekelaag.html"
 </body>
