--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -60,7 +60,13 @@
 <br>
 <br>
 Dit type RAM is een vluchtig geheugen dat regelmatig van spanning moet worden voorzien. Anders verliest het de informatie die erop is opgeslagen
-    
+    <br>
+    <br>
+    Onder randapparatuur vallen allerlei apparaten die voor een bepaalde ondersteunende taak kunnen worden verbonden met computers, laptops en andere systemen. In theorie zouden computers kunnen werken zonder randapparaten. In de praktijk is randapparatuur onmisbaar voor de interactie met de gebruiker en het uitwisselen, archiveren en presenteren van informatie.
+
+Meestal is randapparatuur naast of in de directe omgeving van een computersysteem geplaatst en gebruikt. De apparatuur wordt verbonden via een kabel (zoals USB of ethernet) of een draadloze verbinding (zoals BlueTooth). De poorten waarmee deze verbindingen worden aangesloten kunnen rechtstreeks of met behulp van uitbreidingsmodules verbonden zijn met het moederbord. Ook bepaalde apparatuur die in een systeem kan worden ingebouwd kan worden gezien als randapparatuur.
+<br>
+<br> 
     2. Mijn fysiekelaag 
     <br>
     <br>
@@ -78,7 +84,7 @@ Dit type RAM is een vluchtig geheugen dat regelmatig van spanning moet worden vo
 <br>
 <p>Lees meer over de fysiekelaag op deze <a href="https://nl.wikipedia.org/wiki/Fysieke_laag" target="_blank">pagina</a>.</p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/-aQOv3T7P8E?si=lGqOfZrpcdlQzUOr" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/qPAlct6S2Xg?si=9W5DpBrqsqfvOyEr" frameborder="0" allowfullscreen></iframe>
 
 <img src="fysiekelaagafbeelding.jpeg" alt="fysiekelaag.html"
 </body>
