--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -70,21 +70,17 @@ Dit type RAM is een vluchtig geheugen dat regelmatig van spanning moet worden vo
 Meestal is randapparatuur naast of in de directe omgeving van een computersysteem geplaatst en gebruikt. De apparatuur wordt verbonden via een kabel (zoals USB of ethernet) of een draadloze verbinding (zoals BlueTooth). De poorten waarmee deze verbindingen worden aangesloten kunnen rechtstreeks of met behulp van uitbreidingsmodules verbonden zijn met het moederbord. Ook bepaalde apparatuur die in een systeem kan worden ingebouwd kan worden gezien als randapparatuur.
 <br>
 <br> 
-    2. Mijn fysiekelaag 
-    <br>
-    <br>
-    Bij een iPhone verwijst de fysieke laag naar de hardware componenten die verantwoordelijk zijn voor de communicatie. Dit zijn de elektrische signalen, connectoren, en de fysieke verbindingen die worden gebruikt om gegevens over te dragen. Dit zijn enkele voorbeelden:
-    <br>
-    <br>
-    Wi-Fi en Bluetooth: Deze technieken maken gebruik van radiosignalen om draadloze communicatie mogelijk te maken.
-    <br>
-    <br>
-    Lightning-connector: Dit is de fysieke poort die wordt gebruikt voor het opladen en het overdragen van gegevens via een kabel. Bijvoorbeeld fotos overzetten van een telefoon naar een computer met een USB-kabel.
-    <br>
-    <br>
- Antennes: Deze zorgen voor de verbinding met mobiele netwerken voor bellen, sms’en en mobiele data (4G of 5G).
+   3. Processor 
 <br>
 <br>
+De processor van je smartphone, ook wel chipset genaamd, is het component dat alles van je smartphone aanstuurt en goed laat functioneren. Het is te vergelijken met het brein van het menselijk lichaam. Alle handelingen die jij op je smartphone verricht gaan regelrecht naar de processor. Vervolgens worden deze handelingen omgezet in visuele veranderingen op je beeldscherm. En dit gebeurt allemaal in een fractie van een seconde
+<br>
+<br>
+Hoe werkt de processor?
+<br>
+<br>
+Stel: je opent een foto in je galerij. Deze handeling wordt ontvangen door de processor en opgeslagen in het geheugen van je toestel; de ophaalfase. Vervolgens wordt de handeling vertaald naar eentjes en nulletjes in de decodeerfase. De instructies zijn nu opgeslagen in een taal die jouw smartphone begrijpt. In de uitvoerfase zendt de processor de eentjes en nulletjes uit en jij ziet het allemaal gebeuren op je scherm; je foto wordt geopend. Tot slot worden de uitgevoerde instructies opgeslagen in het registergeheugen in de opslagfase. Daarna zal het proces weer opnieuw starten.
+
 <p>Lees meer over de fysiekelaag op deze <a href="https://nl.wikipedia.org/wiki/Fysieke_laag" target="_blank">pagina</a>.</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/qPAlct6S2Xg?si=9W5DpBrqsqfvOyEr" frameborder="0" allowfullscreen></iframe>
