--- a/toepassingenlaag.html
+++ b/toepassingenlaag.html
@@ -38,40 +38,25 @@
     Uitleg over de toepassingenlaag
     <br>
     <br>
-    1. Wat is de toepassingenlaag
+     Wat is de toepassingenlaag
     <br>
     <br>
-    De toepassingslaag, is de bovenste laag in het 3-lagen model in ICT-systemen. Deze laag is verantwoordelijk voor het bieden van netwerkdiensten direct aan de eindgebruikers Hier zijn een paar punten over de toepassingslaag:
+    De toepassingslaag, is de bovenste laag in het 3-lagen model in ICT-systemen. Deze laag zie je als enigste als gebruiker . Deze laag zorgt ervoor dat alle apps blijven draaien. Zoals je meldingen, spelletjes en sociale media. Het zorgt ervoor dat jij je telefoon makkelijk en soepel kan laten functioneren. 
     <br>
     <br>
     Functies van toepassingenlaag
     <br>
     <br>
-    Communicatie: Zorgt voor communicatie tussen applicaties op verschillende systemen. Dit zijn Bijvoorbeeld: e-mails 
+   De functie is eigenlijk dat je je telefoon makkeloijk kan gebruiken  doordat je bij alle apps en functies kan komen. Het zorgt ervoor dat de gebruiker eenvoudig apps kan openen, instellingen kan veranderen. Eigenlijk is het een soort vertaler tussen jou en de telefoon. Wat jij doet vertaalt de toepassingenlaag naar de telefoon. 
    <br>
    <br>
-   Protocolen: Bevat verschillende protocollen zoals: FTP (voor bestandsoverdracht) of SMTP (voor e-mail).
+   Voorbeelden van de toepassingenlaag
    <br>
+   1. Youtube 
    <br>
-   Interface: Biedt een interface voor gebruikers en applicaties om toegang te krijgen tot netwerkdiensten. 
+   2. Instagram 
    <br>
-   <br>
-   2. Mijn  toepassingenlaag bij IOS
-   <br>
-   <br>
-   De toepassingslaag op een iPhone speelt een belangrijke  rol in het werken  van verschillende apps en diensten. Hier zijn enkele functies van de toepassingslaag op een iPhone:
-   <br>
-   <br>
-   Communicatie: De toepassingslaag zorgt ervoor dat apps zoals Mail, Safari, en Berichten kunnen communiceren met servers en andere apparaten via internet. 
-   <br>
-   <br>
-   Protocolen: Deze laag maakt gebruik van verschillende netwerkprotocollen zoals HTTP/HTTPS voor webverkeer, SMTP/IMAP voor e-mail.
-   <br>
-   <br>
-   Interface: Het biedt een interface voor gebruikers en apps om netwerkdiensten te gebruiken. Bijvoorbeeld, wanneer je een webpagina opent in Safari, maakt de toepassingslaag gebruik van het HTTP-protocol om de pagina op te halen van een webserver
-   <br>
-   <br>
-   Dataoverdracht: Apps zoals iCloud Drive en AirDrop gebruiken de toepassingslaag om bestanden en gegevens over te dragen tussen apparaten. Dit gebeurt via protocollen.
+   3.Tiktok 
    <br>
    <br>
    <p>Lees meer over de toepassingenlaag op deze <a href="https://nl.wikipedia.org/wiki/Toepassingslaag#:~:text=Een%20toepassingslaag%20of%20applicatielaag%20is,communiceren%20over%20telecommunicatienetwerken%20en%20computernetwerken." target="_blank">pagina</a>.</p>
