--- a/logischelaag.html
+++ b/logischelaag.html
@@ -40,19 +40,23 @@
 <p>1.Wat is de logischelaag? </p>
 <p> De logische laag is een onderdeel van het 3-lagen model in ICT-systemen. Dit model verdeelt een systeem in drie lagen: de toepassingenlaag, de logische laag, en de fysieke laag.</p>
 
-    De logische laag is de software die de werking van de hardware ondersteunt. Voorbeelden van dingen die  in de logische laag zitten:
+    Het is het deel van je telefoon van de software dat het besturingssysteem en alle apps bestuurt. Soms word het wel de ontzichbare laag genoemd. Het zorgt ervoor dat alles snel en soepel gaat zoals als jij een app opent dat die dan snel opstart, maar ook het verbinden met hardware zoals: microfoon of je camera. 
     <br>
    <br>
-   1. Besturingssystemen (zoals Andriod of iOS)
+  Wat zijn de Functies? 
    <br>
    <br>
-   2.Bestandssystemen en beveiliging
+  De functies van de logischelaag is om alles goed met elkaar te laten samenwerken. Het zorgt ervoor dat je telefoon snel reageert, gegevens veilig worden opgeslagen, en dat de hardware goed word gebruikt.
    <br>
    <br>
-   3. Netwerksoftware (zoals lokaal netwerk en internet)
+   3. Voorbeelden van logischelaag
    <br>
    <br>
-    Deze laag zorgt ervoor dat de hardware goed kan worden gebruikt door de toepassingen die erop draaien.
+    1. Het zorgt voor dat als je tussen apps schakelt dat de apps dan door blijven i.p.v dat ze helemaal uitschakelen.
+    <br>
+    2. Het zorgt ervoor dat je telefoon beveiligt tegen virussen. 
+    <br>
+    3. OS: Dat is een progamma dat na het opstarten van je telefoon in het geheugen geladen wordt en de hardware aanstuurt. Bij apple is dat IOS en bij samsung is dat android.
 
     <p>2. Mijn logischelaag (IOS) :</p>
     <p> het is een besturingssysteem voor een mobiel ontwikkeld door Apple voor hun iPhone, iPad en iPod Touch apparaten. Het zorgt ervoor dat je deze apparaten kunt gebruiken door de hardware en software te beheren. Eerst werd het uitgebracht in 2007 als Iphone OS samen met de eerste Iphone. In 2010 werd de naam veranderd naar iOS om aan te geven dat het besturingssysteem niet alleen voor de iPhone bedoeld was. IOS is nu niet alleen voor iphone, maar ook voor de Ipad en AppleTV. </p>
