--- a/toepassingenlaag.html
+++ b/toepassingenlaag.html
@@ -50,18 +50,16 @@
    De functie is eigenlijk dat je je telefoon makkeloijk kan gebruiken  doordat je bij alle apps en functies kan komen. Het zorgt ervoor dat de gebruiker eenvoudig apps kan openen, instellingen kan veranderen. Eigenlijk is het een soort vertaler tussen jou en de telefoon. Wat jij doet vertaalt de toepassingenlaag naar de telefoon. 
    <br>
    <br>
-   Voorbeelden van de toepassingenlaag
-   <br>
-   1. Youtube 
-   <br>
-   2. Instagram 
-   <br>
-   3.Tiktok 
+ De toepassingenlaag maakt ook gebruik van API"s, maar wat zijn dat dan ?
    <br>
    <br>
-   <p>Lees meer over de toepassingenlaag op deze <a href="https://nl.wikipedia.org/wiki/Toepassingslaag#:~:text=Een%20toepassingslaag%20of%20applicatielaag%20is,communiceren%20over%20telecommunicatienetwerken%20en%20computernetwerken." target="_blank">pagina</a>.</p>
+   Een API moet je zien als iets wat met elkaar communiceert. Je kan het het beste vergelijken met een lamp en een stekkerdoos. Als je de stekker van de lamp in het stekkerdoos past, dan gaat de lamp aan. De lamp communiceert dan dus met het stekkerblok en er wordt elektriciteit uitgewisseld. En met een API is de elektriciteitdie word uitgewisseld Data. De toepassingen laag is het snoer dat het door geeft. De toepassingenlaag kan van het ene systeem naar het andere systeem sturen. 
+   <br>
+   <br>
 
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/rxdBKMDCdN0?si=6FLdaT61gANbRlzc" frameborder="0" allowfullscreen></iframe>
+   <p>Lees meer over de toepassingenlaag op deze <a href="https://www.salesforce.com/nl/blog/wat-is-een-api/" target="_blank">pagina</a>.</p>
+
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/s7wmiS2mSXY?si=ou4aaR0Z9ttSa_VS" frameborder="0" allowfullscreen></iframe>
 
    <img src="toepassinglaagafbeelding.gif" alt="toepassingenlaag.html"
 
