--- a/toepassingenlaag.html
+++ b/toepassingenlaag.html
@@ -61,7 +61,7 @@
 
    <iframe width="560" height="315" src="https://www.youtube.com/embed/s7wmiS2mSXY?si=ou4aaR0Z9ttSa_VS" frameborder="0" allowfullscreen></iframe>
 
-   <img src="toepassinglaagafbeelding.gif" alt="toepassingenlaag.html"
+   <img src="API .png" alt="toepassingenlaag.html"
 
 
 </body>
