--- a/toepassingenlaag.html
+++ b/toepassingenlaag.html
@@ -61,8 +61,8 @@
 
    <iframe width="560" height="315" src="https://www.youtube.com/embed/s7wmiS2mSXY?si=ou4aaR0Z9ttSa_VS" frameborder="0" allowfullscreen></iframe>
 
-   <img src="API .png" alt="toepassingenlaag.html"
 
+   <img src="API .png" width="300px" height="300px"
 
 </body>
 </html>
