--- a/logischelaag.html
+++ b/logischelaag.html
@@ -38,7 +38,7 @@
 <head> Uitleg over de logischelaag</head>
 <body>
 <p>1.Wat is de logischelaag? </p>
-<p> De logische laag is een onderdeel van het 3-lagen model in ICT-systemen. Dit model verdeelt een systeem in drie lagen: de toepassingenlaag, de logische laag, en de fysieke laag.</p>
+<p> De logische laag is de middelste laag van het 3-lagen model in ICT-systemen. Dit model verdeelt een systeem in drie lagen: de toepassingenlaag, de logische laag, en de fysieke laag.</p>
 
     Het is het deel van je telefoon van de software dat het besturingssysteem en alle apps bestuurt. Soms word het wel de ontzichbare laag genoemd. Het zorgt ervoor dat alles snel en soepel gaat zoals als jij een app opent dat die dan snel opstart, maar ook het verbinden met hardware zoals: microfoon of je camera. 
     <br>
