--- a/logischelaag.html
+++ b/logischelaag.html
@@ -46,23 +46,23 @@
   Wat zijn de Functies? 
    <br>
    <br>
-  De functies van de logischelaag is om alles goed met elkaar te laten samenwerken. Het zorgt ervoor dat je telefoon snel reageert, gegevens veilig worden opgeslagen, en dat de hardware goed word gebruikt.
+  De functies van de logischelaag is om alles goed met elkaar te laten samenwerken. Het zorgt ervoor dat je telefoon snel reageert, gegevens veilig worden opgeslagen, en dat de hardware goed word gebruikt. De de logische laag gaat over hoe het besturingssysteem Operating System (OS) en het Database Management Systeem (DBMS) samenwerken om data te beheren en processen te organiseren in een telefoon of computer.
    <br>
    <br>
-   3. Voorbeelden van logischelaag
+   Operating Systeem (OS)
    <br>
    <br>
-    1. Het zorgt voor dat als je tussen apps schakelt dat de apps dan door blijven i.p.v dat ze helemaal uitschakelen.
+   De OS zorgt ervoor dat na het opstarten van een computer in het geheugen geladen wordt en de hardware aanstuurt. Bij mijn telefoon is de OS IOS dat is van apple en  zorgt voor de schakel tussen de hardware en de software van een computer of telefoon. Het OS beheert dingen zoals geheugen, opslag en CPU, en zorgt ervoor dat programma's efficiënt en goed werken.
     <br>
-    2. Het zorgt ervoor dat je telefoon beveiligt tegen virussen. 
     <br>
-    3. OS: Dat is een progamma dat na het opstarten van je telefoon in het geheugen geladen wordt en de hardware aanstuurt. Bij apple is dat IOS en bij samsung is dat android.
+    DBMS
+    <br>
+    <br>
+    De DBMS is eigenlijk een database. Databases zijn erg belangrijke voor het goed regelen van grote hoeveelheden informatie om de gegevens gemakkelijk terug te vinden. Hetmeeste wat je doet op je telefoon word opgelsagen en dat is handig. BIjvoorbeeld bij een spel op je telefoon, maar je sluit het spel af en daarna wil je  het toch weer spelen dan kan je veder gaan bij het Level waar je gebleven bent, want waar je bent gebleven staat in de database 
 
-    
+    <p>Lees meer over IOS op deze <a href="https://nl.wikipedia.org/wiki/Databasemanagementsysteem" target="_blank">pagina</a>.</p>
 
-    <p>Lees meer over IOS op deze <a href="https://nl.wikipedia.org/wiki/IOS_(Apple)" target="_blank">pagina</a>.</p>
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/75KGNq_Jy9g?si=lQVgP64a0m7eQg4M" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/LPlB5kG6TU0?si=aWEpnDFq4iOnQKDo" frameborder="0" allowfullscreen></iframe>
 
 
     <img src="logischelaagafbeelding.png" alt="logischelaag.html"
