--- a/logischelaag.html
+++ b/logischelaag.html
@@ -65,7 +65,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/LPlB5kG6TU0?si=aWEpnDFq4iOnQKDo" frameborder="0" allowfullscreen></iframe>
 
 
-    <img src="logischelaagafbeelding.png" alt="logischelaag.html"
+    <img src="OS.webp" alt="logischelaag.html"
 
 </body>
 </html>
